<resources>
    <string name="app_name">Recipe App</string>
    <string name="action_settings">Settings</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!--Modules-->
    <string name="title_recipe">Recipe</string>
    <string name="title_add_recipe">Add Recipe</string>
    <string name="title_edit_recipe">Edit Recipe</string>
    <string name="title_recipe_detail">Recipe Detail</string>

    <!--Labels-->
    <string name="label_recipe_type">Recipe Type</string>
    <string name="label_recipe_image">Recipe Image</string>
    <string name="label_recipe_name">Recipe Name</string>
    <string name="label_ingredients">Ingredients</string>
    <string name="label_steps">Steps</string>

    <string name="camera_gallery_permission_denied">Permission denied. Unable to access camera and gallery.</string>

    <string name="desc_success_save_recipe">Save recipe successfully.</string>
    <string name="desc_success_update_recipe">Update recipe successfully.</string>
    <string name="desc_success_delete_recipe">Delete recipe successfully.</string>
    <string name="confirm_delete">Confirm delete Recipe-%1$s?</string>
    <string name="confirm_add">Confirm add Recipe?</string>
    <string name="confirm_edit">Confirm update Recipe?</string>
    <string name="no_records">No Record(s)</string>

    <!-- Action Sheet -->
    <string name="action_sheet_title">Please Select</string>

    <!-- case_accept_self -->
    <string-array name="detail_action">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
</resources>
