<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/label_recipe_image"
                android:src="@drawable/ic_add_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/standard"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_recipe_type" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spRecipeType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/standard"
                android:paddingEnd="@dimen/standard"
                android:paddingBottom="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_recipe_name"
                    android:inputType="textCapSentences">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/standard"
                android:paddingEnd="@dimen/standard"
                android:paddingBottom="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_ingredients"
                    android:maxLines="10"
                    android:inputType="textCapSentences|textMultiLine">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/standard"
                android:paddingEnd="@dimen/standard"
                android:paddingBottom="@dimen/standard">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_steps"
                    android:maxLines="10"
                    android:inputType="textCapSentences|textMultiLine">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/standard"
        android:src="@drawable/ic_done_24dp" />

    <include layout="@layout/layout_appbar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>