<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/label_recipe_image"
                android:src="@drawable/ic_add_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/standard"
                    android:paddingTop="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard_half"
                    android:text="@string/label_recipe_type"
                    android:textColor="@color/colorPrimaryText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvRecipeType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard"
                    android:textColor="@color/colorSecondaryText" />

                <include layout="@layout/layout_divider" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/standard"
                    android:paddingTop="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard_half"
                    android:text="@string/label_recipe_name"
                    android:textColor="@color/colorPrimaryText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvRecipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard"
                    android:textColor="@color/colorSecondaryText" />

                <include layout="@layout/layout_divider" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/standard"
                    android:paddingTop="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard_half"
                    android:text="@string/label_ingredients"
                    android:textColor="@color/colorPrimaryText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard"
                    android:textColor="@color/colorSecondaryText" />

                <include layout="@layout/layout_divider" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/standard"
                    android:paddingTop="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard_half"
                    android:text="@string/label_recipe_type"
                    android:textColor="@color/colorPrimaryText" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/standard"
                    android:paddingEnd="@dimen/standard"
                    android:paddingBottom="@dimen/standard"
                    android:textColor="@color/colorSecondaryText" />

                <include layout="@layout/layout_divider" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/standard"
        android:src="@drawable/ic_menu_24dp" />

    <include layout="@layout/layout_appbar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>